WeeChat - Wee Enhanced Environment for Chat
===========================================

ChangeLog - 2006-01-03


Version 0.1.7 (under dev!):
   * replaced Texinfo doc by XML Docbook
   * added color for window separators (when splited)
   * added completion system for plugins/scripts commands
   * fixed plugins autoload
   * added charset by server and channel, new command: /charset
   * added Ruby script plugin
   * added /upgrade command
   * added ETA (Estimated Time of Arrival) for DCC files
   * /nick command is now allowed when not connected to server
   * added server/channel arg to /buffer command for jumping to buffer
   * fixed display bug in chat window when a message length equals to window
     width
   * added new keys for switching to other windows: alt-w followed by
     alt-{arrow}
   * added new keys for scrolling to previous/next highlight: alt-P / alt-N
   * added "read marker": an indicator for first unread line in a
     server or channel buffer (new key alt-U to scroll to marker)
   * new window maganement: custom size for windows, auto resize when
     terminal is resized
   * fixed infinite loop when resizing term to small size
   * added /history command

Version 0.1.6 (2005-11-11):
   * new color management system, IRC colors are now correctly
     displayed and can be removed by new options irc_colors_receive
     and irc_colors_send
   * fixed scroll problem when one line is bigger than screen size
   * added setting for having one server buffer for all servers
     (look_one_server_buffer)
   * added setting for ignoring some chars when completing nicks
   * fixed IRC message parser bug
   * signal SIGPIPE is now ignored
   * added partial match for highlights
   * added dcc_own_ip and dcc_port_range settings
   * full UTF-8 support, auto-detection of UTF-8 usage (locale)
   * added "Day changed to [date]" message when day changes
   * new plugin interface, rewritten from scratch: now loads dynamic C